[package]
name = "argus"
version = "1.0.0"
edition = "2021"
description = "Network traffic interception tool for malware analysis"
authors = ["Argus Contributors"]
license = "Apache-2.0"

[[bin]]
name = "argus"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.25"
rustls = "0.22"
rustls-pemfile = "2"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
futures-util = "0.3"
regex = "1"
mime_guess = "2"
hex = "0.4"
base64 = { version = "0.22", package = "base64" }
ini = "1.3"
colored = "2"
ctrlc = "3"
windivert = "0.6"
windivert-sys = "0.10"
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_NetworkManagement_IpHelper",
] }

[build-dependencies]
embed-manifest = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
